--- a/05.index.html
+++ b/05.index.html
@@ -15,7 +15,7 @@
             height: 20vw;
             -moz-border-radius: 200px;
             -webkit-border-radius: 200px;
-            border-radius: 200px;
+            border-radius: 200p;
             position: absolute;
             background-color: coral;
             color: white;
@@ -27,34 +27,40 @@
     <div id="red"></div>
     <script>
         let red = document.querySelector("#red");
-        let mouseX, mouseY;
-        let redPX, redPY;
         let redCX = red.clientWidth / 2;
         let redCY = red.clientHeight / 2;
-
-        // biger the staps lower the animation
-        let steps = 20;
+        let winCX = window.innerWidth / 2;
+        let winCY = window.innerHeight / 2;
+        let mouseX,
+            mouseY;
+        let redPX = winCX,
+            redPY = winCY;
         document.addEventListener("DOMContentLoaded", init);
         function init() {
+            red.style.left = winCX - redCX + "px"; //center
+            red.style.top = winCY - redCY + "px"; //middle
             document.addEventListener("mousemove", mouseMove);
-            moveRAF();
         }
         function mouseMove(e) {
             mouseX = e.pageX;
             mouseY = e.pageY;
-        }
-        //distance = target - source / steps
-        function moveRAF() {
-            redPX = red.offsetLeft;
-            redPY = red.offsetTop;
-            redPX += (mouseX - redPX - redCX) / steps;
-            redPY += (mouseY - redPY - redCY) / steps;
+            redPX = winCX - redCX + (winCX - mouseX);
+            redPY = winCY - redCY + (winCY - mouseY);
+            if (redPX < 0) {
+                redPX = 0;
+            }
+            if (redPY < 0) {
+                redPY = 0;
+            }
+            if (redPX > window.innerWidth - red.clientWidth) {
+                redPX = window.innerWidth - red.clientWidth;
+            }
+            if (redPY > window.innerHeight - red.clientHeight) {
+                redPY = window.innerHeight - red.clientHeight;
+            }
             red.style.left = redPX + "px";
             red.style.top = redPY + "px";
-
-            requestAnimationFrame(moveRAF);
         }
-
     </script>
 </body>
 
